# rust_8

./: Cargo.toml  readme.md
src/: chip8.rs  main.rs  platform.rs
