[package]
name = "rust_8"
version = "0.1.0"
authors = ["Adrian <bleier.adrian@gmx.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.3"
piston = "0.52.0"
piston2d-graphics = "0.39.0"
pistoncore-glutin_window = "0.68.0"
piston2d-opengl_graphics = "0.77.0"
clap = "3.0.0-beta.2"
